--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -835,3 +835,15 @@
   background-color: #c52c33;
   border: 1px solid #d6d647;
 }
+
+#call_logs th, #call_logs td{
+	padding: 5px !important;
+    font-size: 12px !important;
+}
+#call_logs td{
+	word-break: break-all;
+}
+
+#call_table input[type="checkbox"]{
+	vertical-align: -2px;
+}
